--- a/privacy.html
+++ b/privacy.html
@@ -5,86 +5,80 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - Live Cricket TV & Score</title>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
-      font-family: 'Nunito', sans-serif;
-      background: linear-gradient(135deg, #667eea, #764ba2);
-      color: #fff;
-      padding: 20px;
+      margin: 0;
+      background: #f4fff4;
+      font-family: "Poppins", sans-serif;
+      color: #0e3d1e;
     }
 
-    .container {
-      max-width: 900px;
-      margin: auto;
+    .policy-wrapper {
+      max-width: 950px;
+      margin: 40px auto;
+      padding: 28px;
       background: #ffffff;
-      color: #333;
-      border-radius: 16px;
-      padding: 30px;
-      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
-    }
-
-    h1, h2 {
-      color: #4b0082;
-      margin-bottom: 10px;
+      border-radius: 14px;
+      border-left: 6px solid #0a8f34;
+      box-shadow: 0px 8px 20px rgba(0,0,0,0.1);
     }
 
     h1 {
       font-size: 30px;
+      color: #0a8f34;
+      margin-bottom: 10px;
       font-weight: 700;
     }
 
     h2 {
       font-size: 22px;
+      font-weight: 600;
+      color: #0c5e29;
       margin-top: 25px;
+      margin-bottom: 6px;
     }
 
     p, li {
-      font-size: 16px;
+      font-size: 15px;
+      color: #2f4d36;
       line-height: 1.7;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
     }
 
     ul {
-      padding-left: 20px;
+      padding-left: 22px;
     }
 
     a {
-      color: #0077cc;
+      color: #0a8f34;
       text-decoration: none;
+      font-weight: 600;
     }
-
     a:hover {
       text-decoration: underline;
     }
 
-    @media screen and (max-width: 600px) {
-      .container {
-        padding: 20px;
+    @media(max-width: 600px){
+      .policy-wrapper {
+        margin: 15px;
+        padding: 18px;
       }
 
-      h1 {
-        font-size: 24px;
-      }
-
-      h2 {
-        font-size: 20px;
-      }
-
-      p, li {
-        font-size: 15px;
-      }
+      h1 { font-size: 24px; }
+      h2 { font-size: 19px; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <!-- HEADER (loaded dynamically) -->
+  <div id="header"></div>
+
+  <!-- ORIGINAL CONTENT STARTS HERE -->
+  <div class="policy-wrapper">
+
     <h1>Privacy Policy - Live Cricket TV & Score</h1>
     <p><strong>Effective Date:</strong> November 20, 2025</p>
 
@@ -136,6 +130,22 @@
     <p><strong>Website:</strong> <a href="https://cricketscorelive.github.io/" target="_blank">https://cricketscorelive.github.io</a></p>
 
     <p>Thank you for trusting <strong>Live Cricket TV & Score</strong>.</p>
+
   </div>
+  <!-- ORIGINAL CONTENT ENDS HERE -->
+
+  <!-- FOOTER (loaded dynamically) -->
+  <div id="footer"></div>
+
+  <script>
+    async function load(file, place) {
+      const html = await fetch(file).then(res => res.text());
+      document.getElementById(place).innerHTML = html;
+    }
+
+    load("header.html", "header");
+    load("footer.html", "footer");
+  </script>
+
 </body>
 </html>
