--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - Live Cricket TV & Score</title>
+  <title>Privacy Policy - Live Cricket TV HD Score</title>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -79,10 +79,10 @@
   <!-- ORIGINAL CONTENT STARTS HERE -->
   <div class="policy-wrapper">
 
-    <h1>Privacy Policy - Live Cricket TV & Score</h1>
+    <h1>Privacy Policy - Live Cricket TV HD Score</h1>
     <p><strong>Effective Date:</strong> November 20, 2025</p>
 
-    <p><strong>Drydev</strong> (“we”, “us”, or “our”) created the <strong>Live Cricket TV & Score</strong> app as a free service. This Privacy Policy explains what information is collected and how it is used and protected.</p>
+    <p><strong>Drydev</strong> (“we”, “us”, or “our”) created the <strong>Live Cricket TV HD Score</strong> app as a free service. This Privacy Policy explains what information is collected and how it is used and protected.</p>
 
     <h2>1. Information Collection</h2>
     <p>We do not collect personal data directly. However, we integrate third-party services that may collect anonymous, non-personal data to improve the app’s performance, serve ads, or send notifications.</p>
@@ -129,7 +129,7 @@
     <p><strong>Email:</strong> <a href="mailto:livecrickettvscore@gmail.com">livecrickettvscore@gmail.com</a></p>
     <p><strong>Website:</strong> <a href="https://cricketscorelive.github.io/" target="_blank">https://cricketscorelive.github.io</a></p>
 
-    <p>Thank you for trusting <strong>Live Cricket TV & Score</strong>.</p>
+    <p>Thank you for trusting <strong>Live Cricket TV HD Score</strong>.</p>
 
   </div>
   <!-- ORIGINAL CONTENT ENDS HERE -->
