--- a/privacy.html
+++ b/privacy.html
@@ -83,6 +83,9 @@
     <p><strong>Effective Date:</strong> November 20, 2025</p>
 
     <p><strong>Drydev</strong> (“we”, “us”, or “our”) created the <strong>Live Cricket TV HD Score</strong> app as a free service. This Privacy Policy explains what information is collected and how it is used and protected.</p>
+    <p>
+      <strong>Information:</strong> Our app does not host or play any live streaming content. When users select a live stream, it opens in the device’s default browser and is delivered entirely by third-party websites. All streaming content is controlled and provided by those external sources, and our app holds no responsibility for its availability, accuracy, or copyright status.
+    </p>
 
     <h2>1. Information Collection</h2>
     <p>We do not collect personal data directly. However, we integrate third-party services that may collect anonymous, non-personal data to improve the app’s performance, serve ads, or send notifications.</p>
@@ -149,3 +152,4 @@
 
 </body>
 </html>
+
