--- a/header.html
+++ b/header.html
@@ -1,48 +1,8 @@
-<!-- <header class="lc-header">
+<header class="lc-header">
   <div class="lc-container">
     <img src="logo.png" class="lc-logo" alt="Live Cricket TV & Score">
 
-    <h1 class="lc-title">Live Cricket TV & Score</h1>
-  </div>
-</header>
-
-<style>
-  .lc-header {
-    background: linear-gradient(135deg, #0a7f29, #0e5322);
-    padding: 15px 20px;
-    box-shadow: 0px 4px 12px rgba(0,0,0,0.3);
-  }
-
-  .lc-container {
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    align-items: center;
-    gap: 12px;
-  }
-
-  .lc-logo {
-    height: 45px;
-  }
-
-  .lc-title {
-    color: #eaffea;
-    font-size: 28px;
-    font-weight: 700;
-    font-family: 'Poppins', sans-serif;
-  }
-
-  @media(max-width: 600px){
-    .lc-title { font-size: 20px; }
-    .lc-logo { height: 34px; }
-  }
-</style>
- -->
- <header class="lc-header">
-  <div class="lc-container">
-    <img src="logo.png" class="lc-logo" alt="Live Cricket TV & Score">
-
-    <h1 class="lc-title">Live Cricket TV & Score</h1>
+    <h1 class="lc-title">Live Cricket TV HD Score</h1>
   </div>
 </header>
 
@@ -84,3 +44,4 @@
     }
   }
 </style>
+
