--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live Cricket TV & Score | Fast Live Cricket Live Line, Ball-by-Ball Score, IPL, PSL | Microbuzz Tech</title>
+  <title>Live Cricket TV HD Score | Fast Live Cricket Live Line, Ball-by-Ball Score, IPL, PSL | Microbuzz Tech</title>
   <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
 
   <!-- SEO META DESCRIPTION -->
@@ -30,7 +30,7 @@
     "name": "Microbuzz Tech",
     "url": "https://cricketscorelive.github.io/",
     "logo": "https://cricketscorelive.github.io/logo.png",
-    "description": "Live Cricket TV & Score developed by Microbuzz Tech provides Cricshow-style fast live line, cricket score updates, ball-by-ball commentary, match schedules, odds with history, sessions, fixtures, IPL, PSL, CPL, BPL, T20 World Cup and more.",
+    "description": "Live Cricket TV HD Score developed by Microbuzz Tech provides Cricshow-style fast live line, cricket score updates, ball-by-ball commentary, match schedules, odds with history, sessions, fixtures, IPL, PSL, CPL, BPL, T20 World Cup and more.",
     "sameAs": []
   }
   </script>
@@ -98,7 +98,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1 class="hero-title">Live Cricket TV & Score</h1>
+      <h1 class="hero-title">Live Cricket TV HD Score</h1>
       <p class="hero-text">Watch Live Matches • Get Instant Scores • Stay Updated Anytime</p>
     </div>
   </section>
