--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
     load("header.html", "header");
     load("footer.html", "footer");
   </script>
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3042232621588998"
+     crossorigin="anonymous"></script>
 </body>
 </html>
+
