--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="lc-container">
     <img src="logo.png" class="lc-logo" alt="Live Cricket TV & Score">
 
-    <h1 class="lc-title">Live Cricket TV HD Score</h1>
+    <h1 class="lc-title">Live Cricket TV & Score</h1>
   </div>
 </header>
 
@@ -44,4 +44,5 @@
     }
   }
 </style>
+
 
