--- a/footer.html
+++ b/footer.html
@@ -6,7 +6,7 @@
     <div class="footer-brand">
       <img src="logo.png" class="footer-logo">
       <div>
-        <h2 class="footer-title">Live Cricket TV HD Score</h2>
+        <h2 class="footer-title">Live Cricket TV & Score</h2>
         <p class="footer-dev">Developed by <strong>Microbuzz Tech</strong></p>
       </div>
     </div>
@@ -20,7 +20,7 @@
   </div>
 
   <div class="footer-bottom">
-    © 2025 Live Cricket TV HD Score. All Rights Reserved.
+    © 2025 Live Cricket TV & Score. All Rights Reserved.
     <br>
     <span class="powered">Powered by <strong>Microbuzz Tech</strong></span>
   </div>
@@ -109,4 +109,5 @@
     }
   }
 </style>
+
 
