--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
   <meta name="keywords"
     content="Live Cricket TV, Live Cricket Score, Cricket Live Line, Cricshow, Ball by Ball Score, Live Cricket Commentary, Hindi Commentary, English Commentary, IPL Live Score, PSL Live Score, BPL, CPL, T20 World Cup, ODI World Cup, ICC Test Championship, Cricket Odds, Cricket Sessions, Live Scorecard, Microbuzz Tech">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
-  <!-- Canonical for Google -->
-  <link rel="canonical" href="https://cricketscorelive.github.io/">
-
-  <!-- Google Fonts -->
+  <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
-
   <!-- SEO Structured Data (Google Rich Results) -->
   <script type="application/ld+json">
   {
@@ -34,144 +31,157 @@
     "sameAs": []
   }
   </script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap">
-
-  <style>
-    body { margin: 0; font-family: Arial, sans-serif; background: #f5f5f5; }
-    header, footer { background: #0a1a44; color: #fff; text-align: center; padding: 14px; }
-    .tabs { display: flex; background: #fff; border-bottom: 1px solid #ddd; overflow-x: auto; -webkit-overflow-scrolling: touch; scrollbar-width: none; }
-    .tabs::-webkit-scrollbar { display: none; }
-    .tab { flex: 0 0 auto; min-width: 90px; text-align: center; padding: 10px 8px; cursor: pointer; color: #666; font-size: 13px; }
-    .tab i { display: block; font-size: 18px; margin-bottom: 4px; }
-    .tab.active { color: #0a1a44; border-bottom: 3px solid #0a1a44; font-weight: bold; }
-    #frameLayout { background: #fff; min-height: calc(100vh - 170px); padding: 16px; overflow: hidden; }
-    @media (min-width: 768px) { .tabs { justify-content: space-around; overflow-x: hidden; } .tab { flex: 1; min-width: unset; } }
-  </style>
-
   <style>
     body {
       margin: 0;
-      background: #f1fff3;
       font-family: 'Poppins', sans-serif;
+      background: #f5f5f5;
     }
 
-    .hero {
+    header, footer {
+      background: #0a1a44;
+      color: #fff;
       text-align: center;
-      padding: 70px 20px;
-      background: url('https://img.freepik.com/free-photo/top-view-cricket-bat-ball-grass_123827-23161.jpg') center/cover no-repeat;
-      color: white;
-      position: relative;
+      padding: 14px;
     }
 
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.55);
+    /* ===== TAB LAYOUT ===== */
+    .tabs {
+      display: flex;
+      background: #1fa84f; /* GREEN background */
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none;
     }
 
-    .hero-content {
-      position: relative;
-      z-index: 2;
+    .tabs::-webkit-scrollbar {
+      display: none;
     }
 
-    .hero-title {
-      font-size: 38px;
-      font-weight: 700;
-    }
-
-    .hero-text {
-      margin-top: 10px;
-      font-size: 20px;
-      opacity: 0.9;
-    }
-
-    .section {
-      max-width: 1000px;
-      margin: 40px auto;
-      padding: 20px;
+    .tab {
+      flex: 0 0 auto;
+      min-width: 90px;
       text-align: center;
-      color: #0e5322;
+      padding: 12px 8px;
+      cursor: pointer;
+      font-size: 13px;
+      color: #ffffff; /* UNSELECTED = WHITE */
+      transition: background 0.2s ease, color 0.2s ease;
     }
 
+    .tab i {
+      display: block;
+      font-size: 18px;
+      margin-bottom: 4px;
+      color: inherit;
+    }
+
+    /* ===== SELECTED TAB ===== */
+    .tab.active {
+      color: #000000; /* BLACK */
+      font-weight: 600;
+      background: rgba(255,255,255,0.25);
+      border-bottom: 3px solid #000;
+    }
+
+    /* ===== FRAME LAYOUT ===== */
+    #frameLayout {
+      background: #ffffff;
+      min-height: calc(100vh - 160px);
+      padding: 16px;
+    }
+
+    /* ===== DESKTOP ===== */
+    @media (min-width: 768px) {
+      .tabs {
+        justify-content: space-around;
+        overflow-x: hidden;
+      }
+      .tab {
+        flex: 1;
+      }
+    }
   </style>
-
 </head>
+
 <body>
 
-  <div id="header"></div>
+<div id="header"></div>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1 class="hero-title">Live Cricket TV HD Score</h1>
-      <p class="hero-text">Watch Live Matches • Get Instant Scores • Stay Updated Anytime</p>
-    </div>
-  </section>
-
+<!-- ===== TABLAYOUT ===== -->
 <div class="tabs">
-  <div class="tab" data-fragment="home"><i class="fa fa-house"></i>Home</div>
-  <div class="tab" data-fragment="live"><i class="fa fa-broadcast-tower"></i>Live</div>
-  <div class="tab" data-fragment="recent"><i class="fa fa-clock-rotate-left"></i>Recent</div>
-  <div class="tab" data-fragment="upcoming"><i class="fa fa-calendar"></i>Upcoming</div>
-  <div class="tab" data-fragment="livestreaming"><i class="fa fa-tv"></i>Streaming</div>
+  <div class="tab" data-fragment="home">
+    <i class="fa fa-house"></i>Home
+  </div>
+  <div class="tab" data-fragment="live">
+    <i class="fa fa-broadcast-tower"></i>Live
+  </div>
+  <div class="tab" data-fragment="recent">
+    <i class="fa fa-clock-rotate-left"></i>Recent
+  </div>
+  <div class="tab" data-fragment="upcoming">
+    <i class="fa fa-calendar"></i>Upcoming
+  </div>
+  <div class="tab" data-fragment="livestreaming">
+    <i class="fa fa-tv"></i>Streaming
+  </div>
 </div>
 
+<!-- ===== FRAME LAYOUT ===== -->
 <div id="frameLayout"></div>
 
 <div id="footer"></div>
-<script>
-    async function load(file, element) {
-      const html = await fetch(file).then(res => res.text());
-      document.getElementById(element).innerHTML = html;
-    }
 
-    load("header.html", "header");
-    load("footer.html", "footer");
-  </script>
+<script>
+  async function load(file, element) {
+    const html = await fetch(file).then(res => res.text());
+    document.getElementById(element).innerHTML = html;
+  }
+
+  load("header.html", "header");
+  load("footer.html", "footer");
+</script>
+
 <script type="module">
   import { getLiveStreams } from "./api/livestreamingApi.js";
   import { LiveStreamingAdapter } from "./adapters/livestreamingAdapter.js";
 
-  const frameLayout = document.getElementById('frameLayout');
-  const tabs = document.querySelectorAll('.tab');
+  const frameLayout = document.getElementById("frameLayout");
+  const tabs = document.querySelectorAll(".tab");
 
-  // Fragment loader
   async function loadFragment(name) {
     try {
       const res = await fetch(`fragments/${name}.html`);
       frameLayout.innerHTML = await res.text();
 
-      // Run fragment-specific JS after HTML is injected
       if (name === "livestreaming") {
         loadLiveStreaming();
       }
-
-    } catch (e) {
+    } catch {
       frameLayout.innerHTML = "<p>Fragment not found</p>";
     }
   }
 
   function openFragment(name) {
-    tabs.forEach(t => t.classList.remove('active'));
-    document.querySelector(`.tab[data-fragment="${name}"]`)?.classList.add('active');
+    tabs.forEach(t => t.classList.remove("active"));
+    document.querySelector(`.tab[data-fragment="${name}"]`)?.classList.add("active");
 
     window.location.hash = name;
     loadFragment(name);
   }
 
   tabs.forEach(tab => {
-    tab.addEventListener('click', () => openFragment(tab.dataset.fragment));
+    tab.addEventListener("click", () => openFragment(tab.dataset.fragment));
   });
 
   function handleHash() {
-    const fragment = window.location.hash.replace('#', '') || 'home';
+    const fragment = window.location.hash.replace("#", "") || "home";
     openFragment(fragment);
   }
 
-  window.addEventListener('hashchange', handleHash);
-  handleHash(); // initial load
+  window.addEventListener("hashchange", handleHash);
+  handleHash();
 
-  // ====== LIVESTREAMING LOGIC ======
   async function loadLiveStreaming() {
     const recyclerView = document.getElementById("recyclerView");
     if (!recyclerView) return;
@@ -181,8 +191,7 @@
     try {
       const data = await getLiveStreams();
       recyclerView.innerHTML = LiveStreamingAdapter(data);
-    } catch (err) {
-      console.error(err);
+    } catch {
       recyclerView.innerHTML = "Failed to load live streams";
     }
   }
